[package]
name = "the_ark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-session = "0.7.2"

env_logger = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.20" # 0.21.0 blocked on sqlx sqlite update
rusqlite = { version = "0.27", features = ["bundled"] } # 0.28.0 blocked on sqlx sqlite update
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rand="0.8.5"
rand_chacha="0.3.1"
rand_core = "0.6.4"
pbkdf2="0.11.0"
hex = "0.4.3"
chrono = "0.4.23"

actix-easy-multipart = "3.0.0"
ring = "0.17.0-alpha.11"
data-encoding = "2.3.3"
mime = "0.3.16"
